--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -6,18 +6,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add relevant Jupyter notebook extensions "
+    "# Add relevant Jupyter notebook extensions \n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/opt/anaconda3/lib/python312.zip', '/opt/anaconda3/lib/python3.12', '/opt/anaconda3/lib/python3.12/lib-dynload', '', '/Users/angelinnali/.venvs/B1-first-venv/lib/python3.12/site-packages', '/Users/angelinnali/Documents/Oxford/Yr3/B1_ComputingEngineering/b1-coding-practical-mt24']\n"
+     ]
+    }
+   ],
    "source": [
     "# You can double-check your Python path like this...\n",
     "import sys  \n",
     "print(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'uuv_mission.dynamic.Mission'> 100 [0.         2.9239131  5.51432416 7.48758532 8.65202856]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check mission loading\n",
+    "from uuv_mission.dynamic import Mission\n",
+    "mission = Mission.from_csv(\"../data/mission.csv\")\n",
+    "print(type(mission), len(mission.reference), mission.reference[:5]) \n",
+    " # Print some info about the mission to double-check it loaded correctly"
    ]
   },
   {
@@ -32,15 +63,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'uuv_mission.dynamic.Mission'> 100 [0.         2.9239131  5.51432416 7.48758532 8.65202856]\n"
+     ]
+    }
+   ],
    "source": [
     "# Import relevant modules\n",
     "\n",
-    "sub = Submarine()\n",
+    "\n",
+    "#sub = Submarine()\n",
     "# Instantiate your controller (depending on your implementation)\n",
     "closed_loop = ClosedLoop(sub, controller)\n",
-    "mission = Mission.from_csv(\"path/to/file\") # You must implement this method in the Mission class\n",
-    "\n",
+    "# Load mission from the data folder\n",
+    "mission = Mission.from_csv(\"../data/mission.csv\") # You must implement this method in the Mission class\n",
     "trajectory = closed_loop.simulate_with_random_disturbances(mission)\n",
     "trajectory.plot_completed_mission(mission)"
    ]
@@ -48,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "first-venv",
+   "display_name": "B1-first-venv",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
